--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pug": "^3.0.2",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^5.3.0",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "vue-cookies": "^1.8.3"
   }
 }
